<resources>
    <string name="app_name">StopWatchApp</string>

    // AppBarのタイトル
    <string name="title_stopwatch_screen">ストップウォッチ</string>
    <string name="title_entry_screen">新規作成</string>
    <string name="title_detail_screen">記録詳細</string>
    <string name="title_edit_screen">編集画面</string>

    // BottomBarのタイトル
    <string name="bottom_nav_timer">タイム測定</string>
    <string name="bottom_nav_records">記録一覧</string>

    // action
    <string name="action_save">保存</string>
    <string name="action_update">更新</string>
    <string name="action_reset">リセット</string>
    <string name="action_edit">編集</string>
    <string name="action_cancel">キャンセル</string>
    <string name="action_exit">閉じる</string>
    <string name="action_delete">削除</string>

    // 記録、Record関係
    <string name="status_running">計測中</string>
    <string name="initial_stopwatch_time">00:00.00</string>
    <string name="record_title">タイトル</string>
    <string name="record_description">内容</string>

    // 削除ダイアログのメッセージ
    <string name="deleteDialog_title">確認</string>
    <string name="deleteDialog_description">選択した記録を削除してもよろしいでしょうか？</string>
</resources>