...
                )
                .padding(16.dp),
            verticalArrangement = Arrangement.spacedBy(16.dp),
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            OutlinedTextField(
                modifier = Modifier.testTag("titleTextField"),
                value = title,
                label = { Text(recordTitleRes) },
                singleLine = true,
                onValueChange = { onTitleChanged(it) },
                readOnly = readOnly,
                keyboardOptions = KeyboardOptions.Default.copy(
                    imeAction = ImeAction.Next
                )
            )
            OutlinedTextField(
                modifier = Modifier.testTag("descriptionTextField"),
                value = description,
                label = { Text(recordDescriptionRes) },
                onValueChange = { onDescriptionChanged(it) },
                readOnly = readOnly,
                maxLines = 10 // 10行まで表示
            )
...
